[gd_scene load_steps=34 format=4 uid="uid://bx0541qc7g2bc"]

[ext_resource type="Texture2D" uid="uid://dlg02twbrc1y3" path="res://addons/kenney_particle_pack/light_01.png" id="1_q8vq6"]
[ext_resource type="Script" uid="uid://bcie4eamxb311" path="res://Gameplay/scripts/Game.gd" id="1_v2bil"]
[ext_resource type="Texture2D" uid="uid://bd07acwkkve1f" path="res://Assets/Textures/Background.png" id="3_r6p7k"]
[ext_resource type="PackedScene" uid="uid://brve1g2gv6p3x" path="res://boss.tscn" id="4_r6p7k"]
[ext_resource type="Texture2D" uid="uid://dk32l2hx638ra" path="res://icon.svg" id="9_c4vo5"]
[ext_resource type="AudioStream" uid="uid://din40wlojhbl0" path="res://Assets/Music/Music1.mp3" id="13_d1b21"]
[ext_resource type="AudioStream" uid="uid://clkwcvrpepnw6" path="res://Assets/Music/Music2.mp3" id="14_ilduj"]
[ext_resource type="FontFile" uid="uid://dp6emwa1le7hg" path="res://Assets/Fonts/Breathe Fire.otf" id="15_ilduj"]
[ext_resource type="Script" uid="uid://dteo701in6tje" path="res://pause_menu.gd" id="15_s2xbw"]
[ext_resource type="Script" uid="uid://dquo7oanyvg3n" path="res://Gameplay/scripts/camera_shake.gd" id="18_iw7q2"]
[ext_resource type="FontFile" uid="uid://di7otrb2nkbin" path="res://Assets/Fonts/Pixellari.ttf" id="18_ixknr"]
[ext_resource type="Texture2D" uid="uid://v7jw51e2b5kk" path="res://addons/kenney_particle_pack/smoke_07.png" id="20_ctmup"]
[ext_resource type="PackedScene" uid="uid://c4lpwykasmsdp" path="res://Gameplay/Nodes/hero.tscn" id="23_td4qv"]
[ext_resource type="Script" uid="uid://cky1axpx6epyr" path="res://Gameplay/scripts/win.gd" id="24_egg54"]
[ext_resource type="Script" uid="uid://bd08h31jmvyeq" path="res://addons/post_processing/node/post_process.gd" id="28_180o4"]
[ext_resource type="Resource" uid="uid://rsjo54si85fj" path="res://PostProcess.tres" id="30_td4qv"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ctmup"]
blend_mode = 1

[sub_resource type="Environment" id="Environment_vwb7u"]
background_mode = 3
background_canvas_max_layer = 3
glow_enabled = true
glow_intensity = 1.1
glow_strength = 1.38
glow_bloom = 0.01
glow_blend_mode = 1

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xyx0r"]
polygon = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vwb7u"]
texture = ExtResource("9_c4vo5")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/modulate = Color(0, 0, 0, 1)
0:0/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_xyx0r")
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[sub_resource type="TileSet" id="TileSet_cqdos"]
tile_size = Vector2i(128, 128)
occlusion_layer_0/light_mask = 1
occlusion_layer_0/sdf_collision = true
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_vwb7u")

[sub_resource type="Curve" id="Curve_5d5pk"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_nm833"]
curve = SubResource("Curve_5d5pk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xyx0r"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(600, 1, 1)
angle_min = -202.5
angle_max = 720.0
gravity = Vector3(0, 250, 0)
radial_accel_curve = SubResource("CurveTexture_nm833")
scale_min = 22.05
scale_max = 22.05
collision_mode = 1
collision_friction = 0.44
collision_bounce = 0.0
collision_use_scale = true

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ixknr"]
blend_mode = 1

[sub_resource type="Animation" id="Animation_185a3"]
resource_name = "End"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.566667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_restart"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ra0u3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bg4i3"]
resource_name = "Start"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.666667, 0.7, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1e-05, 1e-05), Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.26667, 1.73333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.26667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_185a3"]
_data = {
&"End": SubResource("Animation_185a3"),
&"RESET": SubResource("Animation_ra0u3"),
&"Start": SubResource("Animation_bg4i3")
}

[sub_resource type="Animation" id="Animation_rc7cs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_r6p7k"]
resource_name = "anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.32, 0.52),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d1b21"]
_data = {
&"RESET": SubResource("Animation_rc7cs"),
&"anim": SubResource("Animation_r6p7k")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_s2xbw"]
streams_count = 2
stream_0/stream = ExtResource("13_d1b21")
stream_1/stream = ExtResource("14_ilduj")

[node name="Node2D" type="Node2D" groups=["Level"]]
script = ExtResource("1_v2bil")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00470579, 6.01634e-09, 0.105372, 1)
metadata/_edit_use_anchors_ = true

[node name="Light01" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0.858, 0.378, 0, 0.238)
material = SubResource("CanvasItemMaterial_ctmup")
position = Vector2(285, 216)
texture = ExtResource("1_q8vq6")

[node name="Light02" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0.858, 0.378, 0, 0.238)
material = SubResource("CanvasItemMaterial_ctmup")
position = Vector2(1101, 493)
scale = Vector2(1.94, 1.94)
texture = ExtResource("1_q8vq6")

[node name="BackgroundPlaceHolder" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0.368479, 0.554216, 0.766944, 1)
texture_filter = 1
scale = Vector2(4.505, 4.505)
centered = false

[node name="Parallax2D" type="Parallax2D" parent="."]
z_index = -100
scroll_scale = Vector2(0.7, 0.7)

[node name="BackgroundPlaceHolder2" type="Sprite2D" parent="Parallax2D"]
modulate = Color(0.368479, 0.554216, 0.766944, 1)
texture_filter = 1
position = Vector2(-160, -80)
scale = Vector2(3.61, 3.61)
texture = ExtResource("3_r6p7k")
centered = false
region_enabled = true
region_rect = Rect2(-44.3213, -22.1607, 414.404, 243.767)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vwb7u")

[node name="Boss" parent="." instance=ExtResource("4_r6p7k")]
position = Vector2(887, 446)

[node name="Hero" parent="." node_paths=PackedStringArray("target") instance=ExtResource("23_td4qv")]
position = Vector2(187, 504)
target = NodePath("../Boss")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1
position = Vector2(-8, 31)
scale = Vector2(0.4, 0.4)
tile_map_data = PackedByteArray("AAD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAALAAsAAAAAAAAAAAALAAwAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAAwAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAAAAAAAAAAASAAsAAAAAAAAAAAASAAwAAAAAAAAAAAATAAsAAAAAAAAAAAATAAwAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAAAAAAAAAVAAsAAAAAAAAAAAAVAAwAAAAAAAAAAAAWAAsAAAAAAAAAAAAWAAwAAAAAAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAAAAAAAAAAYAAsAAAAAAAAAAAAYAAwAAAAAAAAAAAD+/wsAAAAAAAAAAAD+/wwAAAAAAAAAAAAZAAwAAAAAAAAAAAAZAAsAAAAAAAAAAAAZAAoAAAAAAAAAAAAZAAkAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAYAAAAAAAAAAAAZAAUAAAAAAAAAAAAZAAQAAAAAAAAAAAD9/wwAAAAAAAAAAAD9/wsAAAAAAAAAAAD9/woAAAAAAAAAAAD9/wkAAAAAAAAAAAD9/wgAAAAAAAAAAAD9/wcAAAAAAAAAAAD9/wYAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wMAAAAAAAAAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD9//3/AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD+//v/AAAAAAAAAAD///v/AAAAAAAAAAAAAPv/AAAAAAAAAAABAPv/AAAAAAAAAAACAPv/AAAAAAAAAAADAPv/AAAAAAAAAAAEAPv/AAAAAAAAAAAFAPv/AAAAAAAAAAAGAPv/AAAAAAAAAAAHAPv/AAAAAAAAAAAIAPv/AAAAAAAAAAAJAPv/AAAAAAAAAAAKAPv/AAAAAAAAAAALAPv/AAAAAAAAAAAMAPv/AAAAAAAAAAANAPv/AAAAAAAAAAAOAPv/AAAAAAAAAAAPAPv/AAAAAAAAAAAQAPv/AAAAAAAAAAARAPv/AAAAAAAAAAASAPv/AAAAAAAAAAATAPv/AAAAAAAAAAAUAPv/AAAAAAAAAAAVAPv/AAAAAAAAAAAWAPv/AAAAAAAAAAAXAPv/AAAAAAAAAAAYAPv/AAAAAAAAAAAZAPv/AAAAAAAAAAAZAPz/AAAAAAAAAAAZAP3/AAAAAAAAAAAZAP7/AAAAAAAAAAAZAP//AAAAAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_cqdos")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(581, 323)
script = ExtResource("18_iw7q2")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
process_mode = 3
z_index = 15
position = Vector2(-459, 292)
amount = 64
texture = ExtResource("20_ctmup")
lifetime = 4.0
emission_shape = 3
emission_rect_extents = Vector2(1, 284.62)
gravity = Vector2(250, 0)
angle_min = -133.5
angle_max = 720.0
scale_amount_min = 0.9
scale_amount_max = 1.4
color = Color(0.706292, 0.104164, 0, 0.094)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
visible = false
modulate = Color(0.396889, 0.396889, 0.396889, 1)
position = Vector2(601, 541)
amount = 50
lifetime = 15000.0
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_xyx0r")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(640, 543)

[node name="Win" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("24_egg54")

[node name="ColorRect" type="ColorRect" parent="Win"]
material = SubResource("CanvasItemMaterial_ixknr")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Win"]
libraries = {
&"": SubResource("AnimationLibrary_185a3")
}
autoplay = "Start"

[node name="Control" type="Control" parent="Win"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Win/Control"]
layout_mode = 0
offset_left = -381.0
offset_top = -153.0
offset_right = 400.0
offset_bottom = 189.0
theme_override_fonts/font = ExtResource("18_ixknr")
theme_override_font_sizes/font_size = 250
text = "START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dialogos" type="CanvasLayer" parent="."]

[node name="PostProcess" type="CanvasLayer" parent="."]
script = ExtResource("28_180o4")
configuration = ExtResource("30_td4qv")
metadata/_custom_type_script = "uid://bd08h31jmvyeq"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 128

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2"]
libraries = {
&"": SubResource("AnimationLibrary_d1b21")
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_s2xbw")
autoplay = true
bus = &"Music"

[node name="PauseMenu" type="CanvasLayer" parent="."]
script = ExtResource("15_s2xbw")

[node name="Panel" type="Panel" parent="PauseMenu"]
process_mode = 3
offset_right = 1152.0
offset_bottom = 649.0

[node name="ColorRect" type="ColorRect" parent="PauseMenu/Panel"]
layout_mode = 0
offset_right = 1406.0
offset_bottom = 763.0
mouse_filter = 2
color = Color(0, 0, 0, 0.686275)

[node name="Continuar" type="Button" parent="PauseMenu/Panel"]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -40.0
offset_right = 250.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("15_ilduj")
theme_override_font_sizes/font_size = 36
text = "Continuar"

[node name="Menu" type="Button" parent="PauseMenu/Panel"]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 94.23
offset_right = 250.0
offset_bottom = 174.23
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("15_ilduj")
theme_override_font_sizes/font_size = 36
text = "Menú Principal"

[connection signal="fire_ball" from="." to="Hero" method="_on_node_2d_fire_ball"]
[connection signal="manos" from="." to="Hero" method="_on_node_2d_manos"]
[connection signal="pressed" from="PauseMenu/Panel/Continuar" to="PauseMenu" method="_on_continuar_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/Menu" to="PauseMenu" method="_on_menu_pressed"]
